syntax = "proto3";

option go_package = "./main";

service CacheService {
    rpc getKey(Str) returns (Str) {}
    rpc setKey(Cache) returns (Cache) {}
    rpc clear(Empty) returns (Empty) {}
}

message Empty {}

message Str {
    string val = 1;
}

message Cache {
    string key = 2;
    string value = 3;
}
